--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
             <p class="birth">Date of birth</p>
         </div>
     </div>
+    <div>
+        <h1>All be fine</h1>
+    </div>
 </body>
 </html>
